--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,226 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap');
+
+// colors
+$primary: #034357;
+
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+
+body {
+    // background: #b00606;
+    // background: radial-gradient(circle, rgba(176, 6, 6, 0.6755077030812324) 11%, rgba(176, 6, 6, 0.5634628851540616) 61%);
+    background: url('./assets/background.svg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 100vh;
+}
+
+nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    display: flex;
+    padding: 10px 20px;
+    justify-content: space-between;
+    align-items: center;
+
+    .logo {
+        cursor: pointer;
+    }
+
+    .links {
+        display: flex;
+        gap: 20px;
+
+        ul {
+            list-style: none;
+            display: flex;
+            align-items: center;
+            gap: 20px;
+
+            li {
+                cursor: pointer;
+                color: white;
+                position: relative;
+
+                &::after {
+                    content: '';
+                    position: absolute;
+                    top: 4px;
+                    right: -10px;
+                    width: 2px;
+                    height: 80%;
+                    transform: rotate(10deg);
+                    background: white;
+                }
+
+                &:last-child {
+                    position: static;
+                }
+            }
+        }
+
+        button {
+            cursor: pointer;
+        }
+    }
+}
+
+.btn {
+    padding: 10px;
+    border-radius: 10px;
+    border: 1px solid #034357;
+    outline: none;
+    background-color: transparent;
+    transition: 0.3s;
+
+    a {
+        text-decoration: none;
+        color: #034357;
+
+    }
+
+    &:hover {
+        a {
+            color: white;
+
+        }
+
+        background: #034357;
+    }
+
+}
+
+main {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    height: 100vh;
+
+    .heading {
+        margin-bottom: 10px;
+        span {
+            color: white;
+            font-size: 26px;
+            font-weight: 500;
+        }
+    }
+
+    form {
+        width: 50%;
+
+        // overflow: hidden;
+        .inputBox {
+            position: relative;
+            width: 100%;
+
+            input {
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                background-color: white;
+                border: none;
+                outline: none;
+                padding: 25px 10px;
+                border-radius: 24px;
+                padding-right: 100px;
+            }
+
+            button {
+                position: absolute;
+                right: 0px;
+                top: 0px;
+                padding: 15px 20px;
+                border-radius: 24px;
+                border: none;
+                outline: none;
+                cursor: pointer;
+                transition: 0.3s;
+
+                &:hover {
+                    background: #034357;
+                    color: white;
+                }
+            }
+        }
+    }
+
+    .urlClipboard {
+        background: white;
+        border-radius: 24px;
+        overflow: hidden;
+
+        span {
+            display: inline-block;
+            padding: 10px;
+        }
+
+        button {
+            position: relative;
+            left: 10px;
+            top: -2px;
+            border: none;
+            outline: none;
+            height: 100%;
+            padding: 10px ;
+            padding-right: 20px;
+            color: $primary;
+            cursor: pointer;
+            border-radius: 20px;
+            transition: 0.3s;
+
+            &:hover {
+                background: #034357;
+                color: white;
+            }
+        }
+    }
+}
+
+.urlClipboard {
+    margin-top: 60px;
+    &.animation{
+        animation: slide-bottom 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+    }
+}
+
+@keyframes slide-bottom {
+    0% {
+                transform: translateY(0);
+      }
+      100% {
+                transform: translateY(10px);
+      }
+  }
+@media screen and (max-width:786px) {
+    main {
+        form {
+            width: 80%;
+            .inputBox{
+                input{
+                    padding: 20px 10px;
+                }
+                button{
+                    padding: 10px 20px;
+                }
+            }
+        }
+    }
+    .urlClipboard{
+        span{
+            font-size: 10px;
+        }
+        button{
+            font-size: 10px;
+            top:0;
+        }
+    }
+}
