--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav>
   <div class="logo">
-    <img src="../assets/logo.svg" alt="">
+    <img src="/src/assets/logo.svg" alt="">
   </div>
   <div class="links">
     <!-- <ul>
