--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav>
   <div class="logo">
-    <img src="/src/assets/logo.svg" alt="">
+    <img src="https://raw.githubusercontent.com/imrealanish/URL-Shortener/d5e57e32c6af1763fc406c68ea16ad317eb11c14/src/assets/logo.svg" alt="">
   </div>
   <div class="links">
     <!-- <ul>
