--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,7 +14,7 @@ $primary: #034357;
 body {
     // background: #b00606;
     // background: radial-gradient(circle, rgba(176, 6, 6, 0.6755077030812324) 11%, rgba(176, 6, 6, 0.5634628851540616) 61%);
-    background: url('./assets/background.svg');
+    background: url('https://raw.githubusercontent.com/imrealanish/URL-Shortener/d2fea55477090c95e2450d05f4138123eccfcb11/src/assets/background.svg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
