--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav>
   <div class="logo">
-    <img src="/src/assets/logo.svg" alt="">
+    <img src="https://raw.githubusercontent.com/imrealanish/URL-Shortener/6c6be7933912b97a55aa589e1757998d8d6190cb/src/assets/logo.svg" alt="">
   </div>
   <div class="links">
     <!-- <ul>
